2004-08-04  David Schleef  <ds@schleef.org>

	convert jpeg to liboil
	* libswfdec/Makefile.am:
	* libswfdec/jpeg/Makefile.am:
	* libswfdec/jpeg/huffman.c:
	* libswfdec/jpeg/jpeg.c: (jpeg_decoder_decode_entropy_segment):
	* libswfdec/swf.c: (swfdec_decoder_parse), (tag_func_dumpbits): make
	more quiet.
	* libswfdec/swfdec_bits.h: compile fix

2004-08-03  David Schleef  <ds@schleef.org>

	Fixes for bits_t change
	* libswfdec/internal.h:
	* libswfdec/swfdec_bits.c: (swfdec_bits_needbits):
	* libswfdec/swfdec_debug.c:
	* libswfdec/swfdec_image.c: (lossless),
	(swfdec_image_colormap_decode):
	* libswfdec/swfdec_internal.h:
	* libswfdec/swfdec_sound.c: (swfdec_sound_mp3_decode_stream):

2004-08-02  David Schleef  <ds@schleef.org>

	Global change bits_t -> SwfdecBits.  Prepend swfdec_bits_ to
	all bit related functions.
	* Makefile.am:
	* configure.ac:
	* gimp-loader/swf-gimp.c: (load_dialog):
	* libswfdec/Makefile.am:
	* libswfdec/actions.c: (get_actions),
	(swfdec_action_script_execute):
	* libswfdec/bits.h:
	* libswfdec/color.c: (tag_func_set_background_color):
	* libswfdec/get.c:
	* libswfdec/get.h:
	* libswfdec/proto.h:
	* libswfdec/render.c: (art_place_object_2), (art_remove_object),
	(art_remove_object_2):
	* libswfdec/swf.c: (swfdec_decoder_parse), (dumpbits),
	(swf_parse_header1), (swf_parse_header2), (swf_parse_tag),
	(tag_func_dumpbits), (tag_func_frame_label):
	* libswfdec/swfdec_button.c: (tag_func_define_button_2):
	* libswfdec/swfdec_decoder.h:
	* libswfdec/swfdec_display.c: (tag_func_place_object_2),
	(tag_func_remove_object), (tag_func_remove_object_2):
	* libswfdec/swfdec_font.c: (tag_func_define_font),
	(get_kerning_record), (tag_func_define_font_2):
	* libswfdec/swfdec_image.c: (swfdec_image_jpegtables),
	(tag_func_define_bits_jpeg), (tag_func_define_bits_jpeg_2),
	(tag_func_define_bits_jpeg_3), (define_bits_lossless):
	* libswfdec/swfdec_internal.h:
	* libswfdec/swfdec_shape.c: (get_shape_rec),