@@ -5,6 +5,7 @@
 #include <libart_lgpl/libart.h>
 #include <stdio.h>
 #include <string.h>
+#include <swfdec_shape.h>
 
 struct swf_svp_render_struct
 {
@@ -56,6 +57,8 @@ void art_rgb_svp_alpha_compose_callback (void *callback_data, int y,
     int start, ArtSVPRenderAAStep * steps, int n_steps);
 void art_grey_svp_alpha_callback (void *callback_data, int y,
     int start, ArtSVPRenderAAStep * steps, int n_steps);
+
+ArtBpath *swfdec_art_bpath_from_points (GArray *array, const double src[6]);
 
 static inline void
 art_affine_copy (double dst[6], const double src[6])
